--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "armalint"
 version = "0.1.0"
 authors = ["Brett <brett@bmandesigns.com>"]
 edition = "2018"
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -10,3 +11,7 @@ edition = "2018"
 pest = "*"
 pest_derive = "*"
 regex = "*"
+
+[build-dependencies]
+pest = "*"
+pest_derive = "*"
