--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -3,8 +3,7 @@ name: Rust
 on: [push]
 
 jobs:
-  build:
-
+  build-linux:
     runs-on: ubuntu-latest
 
     steps:
@@ -13,3 +12,43 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+    - name: Build (Release)
+      run: cargo build --all --release
+    - uses: actions/upload-artifact@master
+      with:
+        name: linux
+        path: target/release/armalint
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: |
+          target/release/armalint
+        draft: true
+      env:
+        GITHUB_TOKEN: ${{ secrets.ARTIFACT_TOKEN }}
+
+  build-windows:
+    runs-on: windows-latest
+
+    steps:
+    - uses: actions/checkout@v1
+    - name: Build
+      run: cargo build --verbose
+    - name: Run tests
+      run: cargo test --verbose
+    - name: Build (Release)
+      run: cargo build --all --release
+    - uses: actions/upload-artifact@master
+      with:
+        name: windows
+        path: target/release/armalint.exe
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: |
+          target/release/armalint.exe
+        draft: true
+      env:
+        GITHUB_TOKEN: ${{ secrets.ARTIFACT_TOKEN }}
