--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,15 +6,16 @@ repository = "https://github.com/SynixeBrett/ArmaLint"
 description = "An Arma linting library"
 keywords = ["arma","sqf"]
 edition = "2018"
+license = "GPL-3.0-or-later"
 build = "build.rs"
 
 [dependencies]
-pest = "*"
-pest_derive = "*"
+pest = "2.1"
+pest_derive = "2.1"
 regex = "1.2"
 strum = "0.16"
 strum_macros = "0.16"
-byteorder = "*"
+byteorder = "1.3"
 
 # Application
 lazy_static = "1.3"
@@ -22,5 +23,5 @@ clap = "2.33"
 colored = "1.8"
 
 [build-dependencies]
-pest = "*"
-pest_derive = "*"
+pest = "2.1"
+pest_derive = "2.1"
